PLAT-467 fix ipad alignment

--- a/profiles/cr/themes/custom/campaign_base/sass/components/cards/_cards.scss
+++ b/profiles/cr/themes/custom/campaign_base/sass/components/cards/_cards.scss
@@ -125,8 +125,8 @@
 }
 .cards__content {
   @include breakpoint($screen-md-only) {
-  	position: relative;
+  	position: absolute;
 	  top: 50%;
-	  transform: translateY(-50%);
+    @include translateY(-50%);
   }
 }
